fixed social media spacing

--- a/scss/4-pages/_caseStudy.scss
+++ b/scss/4-pages/_caseStudy.scss
@@ -129,9 +129,9 @@
     &__desc {
         margin-top: 1rem;
 
-        .social-cta {
+        .social-cta a {
             justify-content: center;
-            margin-right: 1rem;
+            margin-right: 0.5rem;
         }
     }
 
